--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.4",
+    "@mui/styled-engine-sc": "^5.8.0",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "pg": "^8.2.1",
@@ -13,7 +17,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
